--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -27,7 +27,7 @@
         </li>
         <li>
           <.link
-            href={~p"/users/log_out"}
+            href={~p"/users/logout"}
             method="delete"
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
@@ -45,7 +45,7 @@
         </li>
         <li>
           <.link
-            href={~p"/users/log_in"}
+            href={~p"/users/login"}
             class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700"
           >
             Log in
