i thonk this is a good place to create the caregiver flow

--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -38,7 +38,7 @@
                       <.link href={~p"/register"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                   <% end %>
                 <% @current_user.patient -> %>
-                  <.link href={~p"/patient/dashboard"} class="text-xl font-bold text-gray-900">Ankaa</.link>
+                  <.link href={~p"/patient/health"} class="text-xl font-bold text-gray-900">Ankaa</.link>
               <% end %>
             </div>
           </div>
