finsshed patient support. todod finish doctor/nurse routing

--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -29,7 +29,7 @@
                     <% "nurse" -> %>
                       <.link href={~p"/careprovider/patients"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                     <% "caregiver" -> %>
-                      <.link href={~p"/caregiver/careingfor"} class="text-xl font-bold text-gray-900">Ankaa</.link>
+                      <.link href={~p"/caregiver/caringfor"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                     <% "technical_support" -> %>
                       <.link href={~p"/support/home"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                     <% "admin" -> %>
