--- a/ankaa_beacon/lib/ankaa_web/components/layouts/app.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/app.html.heex
@@ -1,6 +1,4 @@
 <header class="px-4 sm:px-6 lg:px-8"></header>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
-    <.flash_group flash={@flash} /> {@inner_content}
-  </div>
+  <div class="mx-auto"><.flash_group flash={@flash} /> {@inner_content}</div>
 </main>
