change care giver to care support rmv ci.yml

--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -28,8 +28,8 @@
                       <.link href={~p"/careprovider/patients"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                     <% "nurse" -> %>
                       <.link href={~p"/careprovider/patients"} class="text-xl font-bold text-gray-900">Ankaa</.link>
-                    <% "caregiver" -> %>
-                      <.link href={~p"/caregiver/caringfor"} class="text-xl font-bold text-gray-900">Ankaa</.link>
+                    <% "caresupport" -> %>
+                      <.link href={~p"/caresupport/caringfor"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                     <% _ -> %>
                       <.link href={~p"/register"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                   <% end %>
