--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -12,6 +12,7 @@
     </script>
   </head>
   <body class="bg-gray-50">
+    <.disclaimer_banner />
     <header class="bg-white shadow">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="flex h-16 justify-between">
