--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -17,11 +17,11 @@
       <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
         <div class="flex h-16 justify-between">
           <div class="flex">
-            <div class="flex flex-shrink-0 items-center">
+            <div class="flex shrink-0 items-center">
               <%= cond do %>
                 <% !@current_user -> %>
                   <.link href={~p"/"} class="text-xl font-bold text-gray-900">Ankaa</.link>
-                <% !@current_user.role -> %>
+                <% !@current_user.role && !@current_user.patient -> %>
                   <.link href={~p"/register"} class="text-xl font-bold text-gray-900">Ankaa</.link>
                 <% @current_user.role && !@current_user.patient -> %>
                   <%= case @current_user.role do %>
