getting patient alerts and fixed some bugs. TODO: dissmissal issues

--- a/ankaa_beacon/lib/ankaa_web/components/layouts/patient.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/patient.html.heex
@@ -1,3 +1,4 @@
+<header class="px-4 sm:px-6 lg:px-8"></header>
 <!-- Alert Banner Portal - Renders at top of page -->
 <div id="alert-portal">
   <%= if assigns[:active_alerts] && not Enum.empty?(@active_alerts) do %>
