--- a/ankaa_beacon/lib/ankaa_web/components/layouts/app.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/app.html.heex
@@ -9,6 +9,12 @@
       current_user={@current_user} />
   <% end %>
 </div>
+<.live_component
+  module={AnkaaWeb.ToastNotification}
+  id="toast-notification-component"
+  toast_message={@toast_message}
+  current_user={@current_user}
+/>
 <main class="px-4 py-20 sm:px-6 lg:px-8">
   <div class="mx-auto"><.flash_group flash={@flash} /> {@inner_content}</div>
 </main>
