--- a/ankaa_beacon/lib/ankaa_web/components/layouts/patient.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/patient.html.heex
@@ -9,12 +9,14 @@
       current_user={@current_user} />
   <% end %>
 </div>
-<.live_component
-  module={AnkaaWeb.ToastNotification}
-  id="toast-notification-component"
-  toast_message={@toast_message}
-  current_user={@current_user}
-/>
+<%= if @current_user do %>
+  <.live_component
+    module={AnkaaWeb.ToastNotification}
+    id="toast-notification-component"
+    toast_message={@toast_message}
+    current_user={@current_user}
+  />
+<% end %>
 <.live_component module={AnkaaWeb.PatientNav} id="patient-nav"
 current_path={@current_path} current_user={@current_user} />
 <div class="py-10">
