get test to pass. eventual TODO is expanding test coverage for context functions i did not do TDD for. not doing TDD makes me kinda silly tbh. like okayyyyy. why would i do this. make it harder ensure some kinda consistency. am i dumb????????? test are not overrated. test are god. test are love

--- a/ankaa_beacon/lib/ankaa_web/components/layouts/app.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/app.html.heex
@@ -9,7 +9,7 @@
       current_user={@current_user} />
   <% end %>
 </div>
-<%= if @current_user do %>
+<%= if @current_user && Map.get(assigns, :toast_message)do %>
   <.live_component
     module={AnkaaWeb.ToastNotification}
     id="toast-notification-component"
