add multiple roles

--- a/ankaa_beacon/lib/ankaa_web/controllers/page_html/home.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/controllers/page_html/home.html.heex
@@ -26,7 +26,7 @@
             class="bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-6 rounded-lg transition duration-300 text-center">
             Get Started
           </.link>
-          <.link href="#learn-more"
+          <.link href="/learn-more"
             class="bg-white hover:bg-gray-50 text-purple-600 border-2 border-purple-600 font-semibold py-3 px-6 rounded-lg transition duration-300 text-center">
             Learn More
           </.link>
@@ -289,7 +289,7 @@
             <.link href="#" class="text-gray-400 hover:text-white transition">Features</.link>
           </li>
           <li>
-            <.link href="#" class="text-gray-400 hover:text-white transition">How It Works</.link>
+            <.link href="/learn-more" class="text-gray-400 hover:text-white transition">How It Works</.link>
           </li>
           <li>
             <.link href="#" class="text-gray-400 hover:text-white transition">Pricing</.link>
