--- a/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
+++ b/ankaa_beacon/lib/ankaa_web/components/layouts/root.html.heex
@@ -8,6 +8,8 @@
       {assigns[:page_title]}
     </.live_title>
     <link phx-track-static rel="stylesheet" href={~p"/assets/app.css"} />
+    <link rel="icon" type="image/svg+xml" href={~p"/images/favicon.svg"} />
+    <link rel="apple-touch-icon" href={~p"/images/favicon.svg"} />
     <script src="https://app.termly.io/resource-blocker/fb153b58-7e6d-4ba8-bff7-5168e65fe968?autoBlock=on"></script>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/app.js"}>
     </script>
